style/main.css
/**
 * ===========================
 * Your Style Goes Here
 * ===========================
**/

[data-ui="text"] {
    max-height: none;
    height: 80vh;
    width: 80vw;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

section>div:not(.row)[data-ui="text"] {
    width: 80vw;
}

/* Choice Model */
[data-ui="choices"] {
    display: none;
    background: rgba(0, 0, 0, 0.75) none repeat scroll 0% 0%;
    height: 100%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

[data-ui="choices"].show {
    display: flex;
}

/* Inline Choice */
[data-ui="inline-choices"] {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 1rem;
}

[data-ui="inline-choices"] button {
    width: auto;
    height: auto;
    padding: 1rem;
}

/* Say */
[data-ui="say"] {
    padding: 1rem;
}

@media screen and (max-width: 767px) {
    [data-ui="inline-choices"] {
        flex-direction: column;
    }
}

/* Style Tags */
i {font-style: italic;}
b {font-weight: bold;}

/* Unread visual on bottom of text */
[data-ui="text"]::after {
    content: " ";
    width: 100%;
    height: 0;
    display: block;
    background: linear-gradient(180deg, rgba(255, 153, 51, 0.75) 0%, #FFF 100%);
    bottom: 0;
    position: sticky;
    transition: height ease 0.5s;
}

[data-ui="text"].unread::after {
    height: 5vh;
}

